--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-  
+ <h1>Santa is coming to town</h1> 
 </body>
 <script src="./script.js"></script>
 </html>
