--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
- <h1>Santa is coming to town</h1> 
+  <div class="heading">
+    <h1>Santa is coming to town</h1>
+  </div>
 </body>
 <script src="./script.js"></script>
 </html>
