--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="heading">
-    <h1>Santa is coming to town</h1>
+    <h1>Santa is coming to town!</h1>
   </div>
 </body>
 <script src="./script.js"></script>
