--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
   <div class="heading">
     <h1>Santa is coming to town!</h1>
   </div>
+  <div class="container">
+
+    <div class="christmas">
+      <div class="block">
+        <h4 class="days"></h4>
+        <h3>DAYS</h3>
+        <h4 class="hours"></h4>
+        <h3>HOURS</h3>
+        <h4 class="minutes"></h4>
+        <h3>MINUTES</h3>
+        <h4 class="seconds"></h4>
+        <h3>SECONDS</h3>
+      </div>
+
+    </div>
+  </div>
 </body>
 <script src="./script.js"></script>
 </html>
