--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christmas</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   <div class="heading">
     <h1>Santa is coming to town!</h1>
   </div>
-  
+
   <div class="container">
 
   <div class="christmas">
