--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+  <audio id="myAudio" src="./style/Let It Snow - Dean Martin.mp3" loop="loop" autoplay="allowed"></audio>
   <div class="heading">
     <h1>Santa is coming to town!</h1>
   </div>
