--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="heading">
     <h1>Santa is coming to town!</h1>
   </div>
-  <button> <img src="./style/icons8-play-64.png" alt="play"></button>
+  <button id="button"><img src="./style/icons8-play-100.png" alt="play"></button>
   <div class="container">
   <div class="christmas">
     <div class="block">
